Biogen Director Platform Innovation & DevOps | SmartRecruiters. Site Reliability Engineer/ DevOps Engineer | Okta. DevOps/ Site Reliability Engineer, Okta Access Gateway (Senior/ Staff) | Okta. Job @ Onedot (Schlieren): DevOps Engineer Intern | JOIN. DevOps Solution Architect (Chicago, IL ) - ActiveSoft, Inc - Career Page. Job Application for DevOps Engineer at Fuze. Job Application for DevOps and Systems Engineer at Datatron Technologies.     DevOps Engineer at Runtastic GmbH . Jobvite, Inc. Careers - Senior DevOps Tooling Engineer (remote). Job @ Lana Labs (Berlin): DevOps Engineer (f/m/d) | JOIN. Job Application for DevOps Platform Engineer | Platform Engineering at Deloitte. RingCentral Careers - DevOps.       Lead DevOps Engineer - OpenVPN Inc.     . DevOps Support Engineer - Willis Towers Watson Careers.     Devops Engineer at Scripbox Advisors Private Limited . Verisk DevOps Engineer II | SmartRecruiters. MJH Life Sciences DevOps Engineer | SmartRecruiters.     DevOps Engineer at Runtastic GmbH . DevOps Engineer - TechFlow - Career Page. DevOps Engineer - CivicActions - Career Page. IT Support & Jr. DevOps Engineer - Togo Group - Togo Group ....     DevOps - Engineering Manager at Srijan Technologies Pvt Ltd . SmartRecruiters Inc DevOps Engineer | SmartRecruiters. SmartRecruiters Inc Junior DevOps Engineer | SmartRecruiters. SmartRecruiters Inc Devops Database Engineer | SmartRecruiters. Job Application for DevOps Lead Engineer at Interana. Playtech DevOps Engineer [010940] | SmartRecruiters. Sodifrance-Netapsys Ingénieur(e) DevOps / Cloud H/F | SmartRecruiters. Version 1 Cloud DevOps Engineer / AWS DevOps Engineer | SmartRecruiters.     Lead DevOps Engineer at Tempo . DevOps Engineer. Jobvite, Inc. Careers - Senior DevOps Tooling Engineer (remote).       DevOps Engineer Medior - Impraise     . DevOps Engineer - FLYHT Aerospace - Career Page. ServiceNow Careers - Technical Lead – DevOps. Job Application for Backend Engineer- Configure(Kubernetes, Auto DevOps,

--- a/devops.html
+++ b/devops.html
@@ -88,7 +88,7 @@
 <p><span class="badge badge-light">Paris, France  Paris</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://openvpninc.recruitee.com/o/lead-devops-engineer-3'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://openvpninc.recruitee.com/o/lead-devops-engineer-3'>
       Lead DevOps Engineer - OpenVPN Inc.
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -142,7 +142,7 @@ internal IT operations. You will be completing tasks in support of our IT functi
 <p><span class="badge badge-light">Krak?w</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999698471626-junior-devops-engineer'>SmartRecruiters Inc Junior DevOps Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999698471626-junior-devops-engineer'>SmartRecruiters Inc Junior DevOps Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Krak?w</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -162,7 +162,7 @@ internal IT operations. You will be completing tasks in support of our IT functi
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Version1/743999698462881-cloud-devops-engineer-aws-devops-engineer'>Version 1 Cloud DevOps Engineer / AWS DevOps Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Version1/743999698462881-cloud-devops-engineer-aws-devops-engineer'>Version 1 Cloud DevOps Engineer / AWS DevOps Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -215,7 +215,7 @@ agile service team focused on daily production service delivery and application?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/dae/jobs/devops-engineer-mid-dXB4cG908r6Bk3aKiznY58'>DevOps Engineer - Mid #0585 job at Stratus Solutions in Fulton, MD, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/dae/jobs/devops-engineer-mid-dXB4cG908r6Bk3aKiznY58'>DevOps Engineer - Mid #0585 job at Stratus Solutions in Fulton, MD, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Fulton, MDFulton, MD</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -227,7 +227,7 @@ agile service team focused on daily production service delivery and application?
 <p><span class="badge badge-light">Mc Lean, VAMc Lean, VA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/dae/jobs/cloud-devops-engineer-ts-sci-with-polygraph-dEr6Omop8r6yKbcR_n82lY'>Cloud DevOps Engineer - TS/SCI with Polygraph #0421 job at Stratus Solutions in Fulton, MD, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/dae/jobs/cloud-devops-engineer-ts-sci-with-polygraph-dEr6Omop8r6yKbcR_n82lY'>Cloud DevOps Engineer - TS/SCI with Polygraph #0421 job at Stratus Solutions in Fulton, MD, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Fulton, MDFulton, MD</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -235,7 +235,7 @@ agile service team focused on daily production service delivery and application?
 <p><span class="badge badge-light">Fulton, MDFulton, MD</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/dae/jobs/senior-devops-engineer-ts-sci-with-polygraph-dUeyQEL6qr6zJxaICoXfFy'>Senior DevOps Engineer - TS/SCI with Polygraph #0467 job at Stratus Solutions in Columbia, MD, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/dae/jobs/senior-devops-engineer-ts-sci-with-polygraph-dUeyQEL6qr6zJxaICoXfFy'>Senior DevOps Engineer - TS/SCI with Polygraph #0467 job at Stratus Solutions in Columbia, MD, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -263,7 +263,7 @@ agile service team focused on daily production service delivery and application?
 <p><span class="badge badge-light">Cologne Cologne</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/quadient/job/oj4rbfwJ'>Quadient Careers - Ing?nieur Syst?me DevOps</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/quadient/job/oj4rbfwJ'>Quadient Careers - Ing?nieur Syst?me DevOps</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -271,7 +271,7 @@ agile service team focused on daily production service delivery and application?
 <p><span class="badge badge-light">Plano, TX</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/axiomzen/cbb485b5-eb70-49bb-9dc6-e1576015203b'>Axiom Zen - DevOps Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/axiomzen/cbb485b5-eb70-49bb-9dc6-e1576015203b'>Axiom Zen - DevOps Engineer</a></h5> 
 <p><span class="badge badge-light">Vancouver, BC  Vancouver</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -293,7 +293,7 @@ such as DevOps, SRE or Operations Engineer roles. Knowledge of Linux, nginx,
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698374645-cloud-administrator-devops-ubisoft-cloud-'>Ubisoft Cloud Administrator (Devops - Ubisoft Cloud) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698374645-cloud-administrator-devops-ubisoft-cloud-'>Ubisoft Cloud Administrator (Devops - Ubisoft Cloud) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Montreal, QCCanada  Montreal Montreal</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -305,7 +305,7 @@ such as DevOps, SRE or Operations Engineer roles. Knowledge of Linux, nginx,
 <p><span class="badge badge-light">Montreal, QCCanada  Montreal Montreal</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SMARTWAVE/743999698370199-senior-consultant-devops-architect'>SMARTWAVE Senior Consultant  - DevOps Architect | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SMARTWAVE/743999698370199-senior-consultant-devops-architect'>SMARTWAVE Senior Consultant  - DevOps Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -384,7 +384,7 @@ faster, more secure and privacy-centric public DNS resolver. This is available?.
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/guidewire-software/job/odUpbfwr'>Guidewire Software, Inc. Careers - Director of DevOps,  Risk Analytics - San Mateo, CA</a></h5> 
+<h5><a href='https://jobs.jobvite.com/guidewire-software/job/odUpbfwr'>Guidewire Software, Inc. Careers - Director of DevOps,  Risk Analytics - San Mateo, CA</a></h5> 
 <p><span class="badge badge-light">San Mateo, CA  San Mateo, CA  San Mateo, California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -396,7 +396,7 @@ faster, more secure and privacy-centric public DNS resolver. This is available?.
 <p><span class="badge badge-light">Plano, TX</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Broadridge/743999698329213-senior-devops-engineer-contract-'>Broadridge Senior DevOps Engineer (Contract) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Broadridge/743999698329213-senior-devops-engineer-contract-'>Broadridge Senior DevOps Engineer (Contract) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -428,7 +428,7 @@ faster, more secure and privacy-centric public DNS resolver. This is available?.
 <p><span class="badge badge-light">London London</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584548'>Stellenangebot: Systemadministrator Linux mit Schwerpunkt DevOps (m/w/d) (Erlangen) ? dasauge? Stellenmarkt</a></h5> 
+<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584548'>Stellenangebot: Systemadministrator Linux mit Schwerpunkt DevOps (m/w/d) (Erlangen) ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
