Internship – Procurement Analyst Team - ICL group     . Graphic designer - intern at Opera.       UI/UX Designer Internship - Helloprint     .       Product Manager Internship - Helloprint     . Palo Alto Networks Careers - Intern - Software Engineer in Test, Performance. Ubisoft Generalist Programmer Intern | SmartRecruiters. Network Intern - NPI VT - Career Page. Environmental Science Intern-Ann Arbor - Tetra Tech Careers. GIS/Environmental Science Intern-Ann Arbor - Tetra Tech Careers.     #846 - Engineering Intern - Days at Janicki Industries . Internship Coordinator - LBL Careers. Investment Internship- PIT - Willis Towers Watson Careers. Health and Benefits Intern (Winter 2021) - Willis Towers Watson Careers. Artistic Marketing + Communications Intern | WorkNOLA. Planned Parenthood of Northern New England - Graphic Design & Social Media  Marketing Intern Colchester, VT Spring 2020. Planned Parenthood of Northern New England - Fundraising Intern Colchester, VT Spring 2020. BPM - Multimedia Marketing Intern. IKEA Southeast Asia Ecommerce Finance Intern | SmartRecruiters. ServiceNow Careers - Finance Intern. Summer 2020 Intern - Economic Research (Undergraduate) - The Federal Reserve System Careers. STCU Quality Control & Assurance Intern | SmartRecruiters. Undergraduate IT Internship Spring 2020 - Florida Blue Careers. Splunk Careers - Presales Engineering Intern (12 month placement - starting June 2020).       Revenue Intern - The Student Hotel     .       Community Manager Intern - The Student Hotel     . Visa Intern (MBA) – Seller Strategy | SmartRecruiters. Intern, Sales Development Team | Okta. Software Engineer Intern - USA | Okta. Business Systems Analyst - Intern | Okta. Software Engineer Intern - Canada | Okta. Job @ Onedot (Schlieren): Marketing Intern | JOIN. Job @ Onedot (Schlieren): Data Analyst Intern | JOIN. Job @ Onedot (Schlieren): Web Developer Intern | JOIN. Job @ Onedot (Schlieren): DevOps Engineer Intern | JOIN. How to Transfer "Old-School" 

--- a/internship.html
+++ b/internship.html
@@ -41,6 +41,12 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://iclgroup.recruitee.com/o/internship-procurement-analyst-team-amsterdam'>
+      Internship ? Procurement Analyst Team - ICL group
+    </a></h5> 
+<p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='https://opera.breezy.hr/p/ca999e27c909-graphic-designer-intern'>Graphic designer - intern at Opera</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
@@ -51,7 +57,7 @@
 <p><span class="badge badge-light">Rotterdam</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://helloprint.recruitee.com/l/en/o/product-manager-internship-rotterdam'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://helloprint.recruitee.com/l/en/o/product-manager-internship-rotterdam'>
       Product Manager Internship - Helloprint
     </a></h5> 
 <p><span class="badge badge-light">Rotterdam</span></p>
@@ -147,7 +153,7 @@
 <p><span class="badge badge-light">Amsterdam</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Visa/743999698532403-intern-mba-seller-strategy'>Visa Intern (MBA) ? Seller Strategy | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Visa/743999698532403-intern-mba-seller-strategy'>Visa Intern (MBA) ? Seller Strategy | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -155,7 +161,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-intern---usa-1803614/?gh_src=82a8057f1'>Software Engineer Intern - USA | Okta</a></h5> 
+<h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-intern---usa-1803614/?gh_src=82a8057f1'>Software Engineer Intern - USA | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -187,7 +193,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/chathamfinancial/jobs/1939833'>Job Application for Software Development Internship (2020) at Chatham Financial</a></h5> 
+<h5><a href='https://boards.greenhouse.io/chathamfinancial/jobs/1939833'>Job Application for Software Development Internship (2020) at Chatham Financial</a></h5> 
 <p><span class="badge badge-light">Kennett Square, PA, USA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -211,7 +217,7 @@
 <p><span class="badge badge-light">Cork, Ireland</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/exabeam/89f0df00-3ea2-4359-904e-86b515911bb4'>Exabeam - Junior Community Manager Intern (2020)</a></h5> 
+<h5><a href='https://jobs.lever.co/exabeam/89f0df00-3ea2-4359-904e-86b515911bb4'>Exabeam - Junior Community Manager Intern (2020)</a></h5> 
 <p><span class="badge badge-light">San Mateo, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -237,7 +243,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/thumbtack/jobs/1936253'>Job Application for Experience Research Intern at Thumbtack</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/thumbtack/jobs/1936253'>Job Application for Experience Research Intern at Thumbtack</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -273,7 +279,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://idealo.join.com/jobs/471787-system-engineer-databases-m-oder-w-oder-x'>Job @ idealo internet (Berlin): System Engineer - ... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://idealo.join.com/jobs/471787-system-engineer-databases-m-oder-w-oder-x'>Job @ idealo internet (Berlin): System Engineer - ... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Deutschland</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -337,7 +343,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://tiaa.referrals.selectminds.com/jobs/internship-human-resources-charlotte-nc-2989'>Internship - Human Resources (Charlotte, NC) - TIAA Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tiaa.referrals.selectminds.com/jobs/internship-human-resources-charlotte-nc-2989'>Internship - Human Resources (Charlotte, NC) - TIAA Careers</a></h5> 
 <p><span class="badge badge-light">Charlotte, NC</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -345,7 +351,7 @@
 <p><span class="badge badge-light">Bogot?</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sygnum.join.com/jobs/471534-full-stack-developer-intern-3-month-internship'>Job @ Sygnum (Z?rich): Full-Stack Developer Intern... | JOIN</a></h5> 
+<h5><a href='https://sygnum.join.com/jobs/471534-full-stack-developer-intern-3-month-internship'>Job @ Sygnum (Z?rich): Full-Stack Developer Intern... | JOIN</a></h5> 
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -365,7 +371,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698514987-2020-co-op-internship-oes-sales-6-12-months-'>Bosch Group 2020 Co-Op Internship ? OES Sales (6 - 12 Months) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698514987-2020-co-op-internship-oes-sales-6-12-months-'>Bosch Group 2020 Co-Op Internship ? OES Sales (6 - 12 Months) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -457,13 +463,7 @@
 <p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://helloprint.recruitee.com/l/nl/o/uiux-designer-internship-rotterdam'>
-      UI/UX Designer Internship - Helloprint
-    </a></h5> 
-<p><span class="badge badge-light">Rotterdam</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
